Prevent RMI registry rebind (#641)
* Prevent registry rebind

* Add the RMI server when not running threaded

* Update MBServerConnectorFactory.java

* Add compiler option for Java 11. Will look to see if there's a way to avoid the use of sun.rmi.registry altogether

* Identify the lookup name from the JMX URL

* Adding unit test for getBindingName()

* Re-instating test removed by mistake

Co-authored-by: Colm O hEigeartaigh <coheigea@users.noreply.github.com>