@@ -2826,7 +2826,10 @@
                         <configuration>
                             <showDeprecation>${cxf.compile.show.deprecation}</showDeprecation>
                             <showWarnings>true</showWarnings>
-                            <compilerArgument>${cxf.compile.flags}</compilerArgument>
+                            <compilerArgs>
+                                <arg>${cxf.compile.flags}</arg>
+                                <arg>--add-exports</arg><arg>java.rmi/sun.rmi.registry=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </plugin>
                     <plugin>
